# OXCompanyTask

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api_v1/: __init__.py
app/api_v1/auth/: annotations.py  dependencies.py  enums.py  exceptions.py  repository.py  router.py  schemas.py  service.py  utils.py
app/api_v1/employees/: enums.py  exceptions.py  repository.py  router.py  schemas.py  service.py
app/base/: __init__.py  base.py  exceptions.py
app/database/: database.py  schema.sql  utils.py
